# nerualnet

./: LICENSE  README.md  data.txt  generateTest.cpp
code/: CMakeLists.txt  main.cpp  net.cpp  net.h  neuron.cpp  neuron.h  trainingSet.cpp  trainingSet.h
